# AWS-S3-Event-Processing-Tools

./: README.md
ParquetOptimizer/: .dockerignore  Dockerfile  lambda.yml  main.py  pyproject.toml
S3EventListener/: lambda.yml  main.py
